// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Input Editable White Mandatory 1`] = `
<Input
  input={
    Object {
      "id": "textInputId",
      "isReadOnly": false,
      "isRequired": true,
      "label": "Submission ID",
      "placeholder": "Enter id",
      "styling": "editable-white",
    }
  }
  onChange={[Function]}
>
  <div>
    <label
      className="label"
      htmlFor="textInputId"
    >
      <div
        className="input-label"
      >
        Submission ID
      </div>
      <span
        className="mandatory"
        id="asterisk"
      >
        *
      </span>
       
      <span
        className="note"
      />
    </label>
    <input
      className="editable-white"
      id="textInputId"
      onChange={[Function]}
      placeholder="Enter id"
      readOnly={false}
      type="text"
    />
    <br />
    <span
      className="error"
    />
  </div>
</Input>
`;

exports[`Storyshots Input Editable White Mandatory Mobile 1`] = `
<Input
  input={
    Object {
      "id": "textInputId",
      "isReadOnly": false,
      "isRequired": true,
      "label": "Submission ID",
      "placeholder": "Enter id",
      "styling": "editable-white",
    }
  }
  onChange={[Function]}
>
  <div>
    <label
      className="label"
      htmlFor="textInputId"
    >
      <div
        className="input-label"
      >
        Submission ID
      </div>
      <span
        className="mandatory"
        id="asterisk"
      >
        *
      </span>
       
      <span
        className="note"
      />
    </label>
    <input
      className="editable-white"
      id="textInputId"
      onChange={[Function]}
      placeholder="Enter id"
      readOnly={false}
      type="text"
    />
    <br />
    <span
      className="error"
    />
  </div>
</Input>
`;

exports[`Storyshots Input Editable White No Label 1`] = `
<Input
  input={
    Object {
      "id": "textInputId",
      "isReadOnly": false,
      "isRequired": false,
      "label": "",
      "placeholder": "Enter id",
      "styling": "editable-white",
    }
  }
  onChange={[Function]}
>
  <div>
    <input
      className="editable-white"
      id="textInputId"
      onChange={[Function]}
      placeholder="Enter id"
      readOnly={false}
      type="text"
    />
    <br />
    <span
      className="error"
    />
  </div>
</Input>
`;

exports[`Storyshots Input Editable White No Label Mobile 1`] = `
<Input
  input={
    Object {
      "id": "textInputId",
      "isReadOnly": false,
      "isRequired": false,
      "label": "",
      "placeholder": "Enter id",
      "styling": "editable-white",
    }
  }
  onChange={[Function]}
>
  <div>
    <input
      className="editable-white"
      id="textInputId"
      onChange={[Function]}
      placeholder="Enter id"
      readOnly={false}
      type="text"
    />
    <br />
    <span
      className="error"
    />
  </div>
</Input>
`;

exports[`Storyshots Input Editable White With Label 1`] = `
<Input
  input={
    Object {
      "id": "textInputId",
      "isReadOnly": false,
      "isRequired": false,
      "label": "Submission ID",
      "placeholder": "Enter id",
      "styling": "editable-white",
    }
  }
  onChange={[Function]}
>
  <div>
    <label
      className="label"
      htmlFor="textInputId"
    >
      <div
        className="input-label"
      >
        Submission ID
      </div>
       
      <span
        className="note"
      />
    </label>
    <input
      className="editable-white"
      id="textInputId"
      onChange={[Function]}
      placeholder="Enter id"
      readOnly={false}
      type="text"
    />
    <br />
    <span
      className="error"
    />
  </div>
</Input>
`;

exports[`Storyshots Input Editable White With Label Mobile 1`] = `
<Input
  input={
    Object {
      "id": "textInputId",
      "isReadOnly": false,
      "isRequired": false,
      "label": "Submission ID",
      "placeholder": "Enter id",
      "styling": "editable-white",
    }
  }
  onChange={[Function]}
>
  <div>
    <label
      className="label"
      htmlFor="textInputId"
    >
      <div
        className="input-label"
      >
        Submission ID
      </div>
       
      <span
        className="note"
      />
    </label>
    <input
      className="editable-white"
      id="textInputId"
      onChange={[Function]}
      placeholder="Enter id"
      readOnly={false}
      type="text"
    />
    <br />
    <span
      className="error"
    />
  </div>
</Input>
`;

exports[`Storyshots Input Non Editable Grey 1`] = `
<Input
  input={
    Object {
      "id": "textInputId",
      "isReadOnly": true,
      "isRequired": false,
      "label": "Submission ID",
      "placeholder": "Enter id",
      "styling": "non-editable-grey",
    }
  }
  onChange={[Function]}
>
  <div>
    <label
      className="label"
      htmlFor="textInputId"
    >
      <div
        className="input-label"
      >
        Submission ID
      </div>
       
      <span
        className="note"
      />
    </label>
    <input
      className="non-editable-grey"
      id="textInputId"
      onChange={[Function]}
      placeholder="Enter id"
      readOnly={true}
      type="text"
    />
    <br />
    <span
      className="error"
    />
  </div>
</Input>
`;

exports[`Storyshots Input Non Editable Grey Mobile 1`] = `
<Input
  input={
    Object {
      "id": "textInputId",
      "isReadOnly": true,
      "isRequired": false,
      "label": "Submission ID",
      "placeholder": "Enter id",
      "styling": "non-editable-grey",
    }
  }
  onChange={[Function]}
>
  <div>
    <label
      className="label"
      htmlFor="textInputId"
    >
      <div
        className="input-label"
      >
        Submission ID
      </div>
       
      <span
        className="note"
      />
    </label>
    <input
      className="non-editable-grey"
      id="textInputId"
      onChange={[Function]}
      placeholder="Enter id"
      readOnly={true}
      type="text"
    />
    <br />
    <span
      className="error"
    />
  </div>
</Input>
`;
